Attempts to fix bg cover on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -72,11 +72,17 @@ a {
 .starfield__wrapper {
   position: fixed;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
   z-index: -2;
   background: #1E1432 url('./images/stars.jpg') no-repeat fixed center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .section {
@@ -112,11 +118,13 @@ a {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
+
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
 }
 
 /* Hide scrollbar for IE, Edge add Firefox */
+
 .scrollbar-hidden {
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -171,7 +179,7 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  height: 100%; 
+  height: 100%;
   width: 100%;
   background: #1E1432 url('./images/stars.jpg') no-repeat fixed center;
   z-index: -3;
